[package]
name = "webrtc_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = {workspace = true}
wasm-bindgen = {version = "0.2.88"}
js-sys = {version = "0.3.65"}
wasm-bindgen-futures = {version = "0.4.38"}
futures = {version = "0.3.29"}

chrono ={version = "0.4.31"}
serde = {version = "1.0.193"}
serde_derive = {version = "1.0.193"}
serde_json = {version = "1.0.108"}

[dependencies.web-sys]
version = "0.3.65"
features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcRtpTransceiver",
  "RtcRtpTransceiverInit",
  "RtcRtpTransceiverDirection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "WebSocket",
  "Document",
  "Element",
  "HtmlMediaElement",
  "MediaStream"
]